5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1577_1331.log
== TEST (2019-04-05 20:55:17) 
-- CODE:
moedas=50
quantideade_de_moedas_aos_guerreiros=int(input(moeda//3))
print(quantidade_de_moedas_aos_guerreiro)
resto=50%3
quantidade_de_moedas_ao_informante=int(input(resto))
print(quantidade_de_moedas_ao_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantideade_de_moedas_aos_guerreiros=int(input(moeda//3))
NameError: name 'moeda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:56:26) 
-- CODE:
moedas=50
p1=int(input(moeda//3))
print(p1)
resto=50%3
p2=int(input(resto))
print(p2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p1=int(input(moeda//3))
NameError: name 'moeda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:57:56) 
-- CODE:
moedas=50
moedas_guerreiros=int(input(moeda//3))
print(moedas_guerreiros)
resto=50%3
moeda_informante=int(input(resto))
print(moeda_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moeda//3))
NameError: name 'moeda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:58:47) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
resto=50%3
moeda_informante=int(input(resto))
print(moeda_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:01:15) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal/3))
print(moedas_guerreiros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:01:59) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:04:24) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
resto=50%3
moedas_informante=int(input(resto))
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:06:12) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
resto=50%3
moedas_informante=input(resto)
print(moedas_informante)
-- EXECUTION TIME:
0.145384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1331/main.py", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:06:17) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
resto=50%3
moedas_informante=input(resto)
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:07:42) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
moedas_informante=input(moedastotal%3)
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:09:33) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
moedas_informante=int(input(moedastotal%3))
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:09:39) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(input(moedastotal//3))
print(moedas_guerreiros)
moedas_informante=int(input(moedastotal%3))
print(moedas_informante)
-- EXECUTION TIME:
0.218156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1331/main.py", line 2, in <module>
    moedas_guerreiros=int(input(moedastotal//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:35:33) 
-- CODE:
moedastotal=50
moedas_guerreiros=int(moedastotal//3)
print(moedas_guerreiros)
moedas_informante=(input(moedastotal%3)
print(moedas_informante)
-- ERROR:
File "XXXX", line 5
    print(moedas_informante)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 22:02:28) 
-- CODE:
moedastotal=50
moedas_guerreiros=(input(moedastotal//3))
print(moedas_guerreiros)
moedas_informante=(input(moedastotal%3))
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    moedas_informante=(input(moedastotal%3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 00:31:59) 
-- CODE:
totalmoedas=50
moedas_guerreiros=int(input(totalmoedas//3))
print(moedas_guerreiros)
moedas_informante(int(input(moedas_guerreiros%3)))
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    moedas_guerreiros=int(input(totalmoedas//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 00:33:29) 
-- CODE:
totalmoedas=50
resto=totalmoedas%3
moedas_guerreiros=int(input(totalmoedas//3))
print(moedas_guerreiros)
moedas_informante(int(input(resto)))
print(moedas_informante)
-- EXECUTION TIME:
0.133681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1331/main.py", line 3, in <module>
    moedas_guerreiros=int(input(totalmoedas//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 00:33:33) 
-- CODE:
totalmoedas=50
resto=totalmoedas%3
moedas_guerreiros=int(input(totalmoedas//3))
print(moedas_guerreiros)
moedas_informante(int(input(resto)))
print(moedas_informante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    moedas_guerreiros=int(input(totalmoedas//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:57:36) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:57:42) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.228555
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
